[gd_scene load_steps=7 format=3 uid="uid://ftwrivxoycjp"]

[ext_resource type="Script" path="res://Scripts/Game/gui.gd" id="1_2ppbm"]
[ext_resource type="Texture2D" uid="uid://c7xklqhia32f" path="res://Assets/Tiny Swords (Update 010)/UI/Banners/Carved_3Slides.png" id="1_8kdi0"]
[ext_resource type="Texture2D" uid="uid://ljw513ni5alo" path="res://Assets/Tiny Swords (Update 010)/UI/Banners/Banner_Connection_Down.png" id="3_b6x6k"]
[ext_resource type="Texture2D" uid="uid://cr8jqmlw271ub" path="res://Assets/Tiny Swords (Update 010)/GUI/KnightWarrirorBlueSingle.png" id="4_q4tl5"]
[ext_resource type="FontFile" uid="uid://coiaqb8xwuaic" path="res://addons/ridiculous_coding/gravity_bold_8.ttf" id="5_7k44b"]

[sub_resource type="FontVariation" id="FontVariation_p2byf"]
base_font = ExtResource("5_7k44b")

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_2ppbm")

[node name="TowerInfo" type="Node2D" parent="."]

[node name="Carved3Slides" type="Sprite2D" parent="TowerInfo"]
visible = false
position = Vector2(574, 564)
scale = Vector2(6, 2)
texture = ExtResource("1_8kdi0")

[node name="ArmySelection" type="Node2D" parent="."]
position = Vector2(72, -65)

[node name="ArmySelectionKnight" type="Node2D" parent="ArmySelection"]
position = Vector2(-69, 48)
metadata/_edit_group_ = true

[node name="KnightArmySelection" type="Sprite2D" parent="ArmySelection/ArmySelectionKnight"]
position = Vector2(1080, 227)
texture = ExtResource("3_b6x6k")

[node name="KnightWarrirorBlueSingle" type="Sprite2D" parent="ArmySelection/ArmySelectionKnight"]
position = Vector2(1081, 232)
texture = ExtResource("4_q4tl5")

[node name="KnightSelectionLabel" type="Label" parent="ArmySelection/ArmySelectionKnight"]
offset_left = 1057.0
offset_top = 294.0
offset_right = 1143.0
offset_bottom = 317.0
theme_override_fonts/font = SubResource("FontVariation_p2byf")
text = "X10"
uppercase = true

[node name="ArmyInfo" type="Node2D" parent="."]

[node name="TabAnimation" type="AnimationPlayer" parent="."]
